# TextMaker

./: Animate.cpp  Animate.h  Button.cpp  Button.h  CMakeLists.txt  Color.cpp  Color.h  ColorPicker.cpp  ColorPicker.h  Constant.h  Cursor.cpp  Cursor.h  DropdownMenu.cpp  DropdownMenu.h  EventHandler.cpp  EventHandler.h  FileItem.cpp  FileItem.h  FileNode.cpp  FileNode.h  FileTree.cpp  FileTree.h  Fonts.cpp  Fonts.h  GUIComponent.cpp  GUIComponent.h  HSVPicker.cpp  HSVPicker.h  History.h  Image.h  Inputbox.cpp  Inputbox.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h  Iterator.h  KeyboardShortcuts.cpp  KeyboardShortcuts.h  Menu.cpp  (+25 more)
